--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "logzio-slack-integration",
   "version": "1.0.0",
   "description": "Logz.io integration with Slack",
-  "main": "src/index.js",
+  "main": "src/index.mjs",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node --experimental-modules src/index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,7 +26,8 @@
   },
   "homepage": "https://github.com/logzio/slack-integration#readme",
   "dependencies": {
+    "botkit": "^0.6.12",
+    "botkit-storage-mongo": "^1.0.7"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
