--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Logz.io integration with Slack",
   "main": "src/index.mjs",
   "scripts": {
-    "start": "node --experimental-modules src/index.mjs",
+    "start": "node --experimental-modules .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
