--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/logzio/slack-integration#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "botkit": "^0.6.12",
     "botkit-storage-mongo": "^1.0.7",
     "winston": "^2.4.1",
