--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.18.0",
     "botkit": "^0.6.12",
     "botkit-storage-mongo": "^1.0.7",
+    "easy-table": "^1.1.1",
     "winston": "^2.4.1",
     "winston-logzio": "^1.0.6"
   },
