--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "winston-logzio": "^1.0.6"
   },
   "devDependencies": {
+    "find-free-port": "^1.2.0",
     "jasmine": "^3.1.0",
+    "jasmine-http-server-spy": "^0.4.0",
     "jasmine-spec-reporter": "^4.2.1"
   }
 }
