--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "winston-logzio": "^1.0.6"
   },
   "devDependencies": {
+    "botkit-mock": "^0.1.7",
     "find-free-port": "^1.2.0",
     "jasmine": "^3.1.0",
     "jasmine-http-server-spy": "^0.4.0",
