--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node .",
-    "test": "node jasmine.js"
+    "test": "node jasmine.js",
+    "lint": "eslint \"src/**/*.js\" --quiet",
+    "format": "prettier --write \"src/**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -41,9 +43,13 @@
   },
   "devDependencies": {
     "botkit-mock": "^0.1.11",
+    "eslint": "^5.14.1",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "find-free-port": "^1.2.0",
     "jasmine": "^3.2.0",
     "jasmine-http-server-spy": "^0.4.1",
-    "jasmine-spec-reporter": "^4.2.1"
+    "jasmine-spec-reporter": "^4.2.1",
+    "prettier": "^1.16.4"
   }
 }
