--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.1'
+version: '2.2'
 
 networks:
   logzbot:
@@ -11,12 +11,31 @@ services:
       MYSQL_PASSWORD: p@ssw0rd
       MYSQL_DATABASE: logzbot
       MYSQL_HOST: db
-    env_file:
-      - .env
     ports:
       - '8080:8080'
     networks:
       - logzbot
+    depends_on:
+      db:
+        condition: service_healthy
+
+  logzbot-test:
+    build:
+      context: ./
+      dockerfile: ./Dockerfile.dev
+    volumes:
+      - ./:/usr/src/app/
+      - /usr/src/app/src/node_modules
+    environment:
+      MYSQL_PORT: 3306
+      MYSQL_USER: root
+      MYSQL_PASSWORD: p@ssw0rd
+      MYSQL_DATABASE: logzbot_test
+      MYSQL_HOST: db
+    ports:
+    - '8080:8080'
+    networks:
+    - logzbot
     depends_on:
       db:
         condition: service_healthy
@@ -26,10 +45,10 @@ services:
     volumes:
       - ./docker/mysql/healthcheck:/usr/local/bin/healthcheck
     environment:
-      MYSQL_DATABASE: logzbot
+      MYSQL_DATABASE: logzbot_test
       MYSQL_ROOT_PASSWORD: p@ssw0rd
     ports:
-      - '3306:3306'
+      - '3307:3306'
     networks:
       - logzbot
     healthcheck:
