--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "botkit": "^0.7.0",
-    "botkit-promise-storage": "^1.1.0",
     "db-migrate": "^0.11.3",
     "db-migrate-mysql": "^1.1.10",
     "easy-table": "^1.1.1",
     "hoek": "^5.0.4",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mysql": "^2.16.0",
     "sql-template-strings": "^2.2.2",
