--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   "homepage": "https://github.com/logzio/slack-integration#readme",
   "dependencies": {
     "axios": "^0.18.1",
-    "botkit": "^0.7.6",
-    "db-migrate": "^0.11.6",
+    "botbuilder-adapter-slack": "^1.0.13",
+    "botkit": "^4.10.0",
+    "db-migrate": "^0.11.12",
     "db-migrate-mysql": "^1.1.10",
+    "dotenv": "^7.0.0",
     "easy-table": "^1.1.1",
     "hoek": "^5.0.4",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.20",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "sql-template-strings": "^2.2.2",
@@ -43,7 +45,7 @@
     "winston-logzio": "^4.0.2"
   },
   "devDependencies": {
-    "botkit-mock": "^0.1.11",
+    "botkit-mock": "^4.10.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
